# tejas

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
include/: projectintegration.hpp
launch/: drink_motion.launch  emulator.launch  feeder_1d_interface.launch  feeder_gmm.launch  feeder_policy_drive.launch  feeder_sideways.launch  feeder_straight.launch  rl_dqn_training.launch  rl_offline_training.launch  rl_q_training.launch  rl_sarsa_training.launch  sensors.launch
resources/: .~lock.reward_table.csv#  DQN_model.h5  DQN_model.json  DQN_performance (copy).csv  DQN_performance.csv  DQN_policy.csv  Q_performance.csv  Q_table.csv  SARSA_performance.csv  SARSA_table.csv  VI_pi_star.csv  reward_table.csv  trajectory.txt
resources/gmm/: 1_rescaled.txt  2_rescaled.txt  3_rescaled.txt  4_rescaled.txt  data1.txt  data2.txt  data3.txt  data4.txt  gmm1.txt  gmr.csv  gmr1.txt  sigma1.txt
resources/gmm/old/: data1.txt  sigma1.txt
scripts/: check_model.py  csv_interface.py  csv_reader.py  csv_tester.py  env.py  feeder_1d_interface.py  feeder_RL_offline.py  feeder_dqn.h5  feeder_dqn.json  feeder_dqn_training.1.py  feeder_dqn_training.1.py~  feeder_dqn_training.py  feeder_dqn_training.py~  feeder_offline_training.py  feeder_q_training.py  feeder_sarsa_training.py  gmm_equalizer.py  robot_emulator_server.py  robot_stepper_client.py  test_model_training.py  test_robot_emulator_service.py  value_iteration.py
src/: data_extractor.bkp  data_extractor.cpp  data_extractor_gmm.cpp  feeder_gmm.cpp  feeder_policy_drive.cpp  feeder_position_control.cpp  feeder_sideways.cpp  feeder_straight.cpp  feeder_straight_1D (copy).cpp  feeder_straight_1D.cpp  feeder_velocity_control.cpp  force_reader.cpp  ik_tests.cpp  position_drive.cpp  position_test.cpp  projectintegration.cpp  quaternion_tester.cpp  robot_control.cpp  tf_caster.cpp  velocity_drive.cpp  velocity_test.cpp
srv/: EnvStep.srv
