<?xml version="1.0"?>
<package format="2">
  <name>tejas</name>
  <version>0.1.0</version>
	<description>Package to test robot control modes</description>
	<maintainer email="tejas.shastha@gmail.com">Tejas Kumar Shastha</maintainer>
  <license>Apache 2.0</license>
  <author>tejas</author>

	<build_depend>message_generation</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>actionlib_msgs</exec_depend>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs roscpp</build_depend>
	<build_export_depend>std_msgs roscpp</build_export_depend>
	<exec_depend>std_msgs roscpp</exec_depend>

        <build_depend>trac_ik_lib</build_depend>
        <exec_depend>trac_ik_lib</exec_depend>
        <depend>orocos_kdl</depend>
        <depend>tf_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_export_depend>message_generation</build_export_depend>
</package>
